[gd_scene load_steps=13 format=3 uid="uid://ci0mdt0uhsegl"]

[ext_resource type="Texture2D" uid="uid://xdpshtfh4hqp" path="res://Sprites/UI/Backgrounds/menu_gray.svg" id="2_i57so"]
[ext_resource type="Script" path="res://Scripts/ButtonManager.gd" id="3_p5rwv"]
[ext_resource type="Theme" uid="uid://h1n0lhl2erdg" path="res://Styles/Button.tres" id="4_038rj"]
[ext_resource type="Shader" path="res://Shaders/blur_screen.gdshader" id="4_nk4r5"]
[ext_resource type="Texture2D" uid="uid://d33tfhgscxwfx" path="res://Sprites/UI/Back.png" id="7_0n06y"]
[ext_resource type="Script" path="res://Scripts/update_checker.gd" id="7_qjwc2"]
[ext_resource type="PackedScene" uid="uid://c4y0bm8im4qh4" path="res://Scenes/Prefabs/settings.tscn" id="10_22rhk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s152k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eppd3"]
bg_color = Color(0.721569, 0.721569, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1oq2d"]
bg_color = Color(0, 0, 0, 0.392157)
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b0mum"]
shader = ExtResource("4_nk4r5")
shader_parameter/blur_intensity = 3.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_q4moa"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.167
anchor_right = 1.167
anchor_bottom = 1.0
offset_left = 0.144012
offset_right = -0.143921
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(576.144, 864)
texture = ExtResource("2_i57so")
expand_mode = 1

[node name="ButtonManager" type="Node" parent="."]
script = ExtResource("3_p5rwv")

[node name="LevelProgressBar" type="ProgressBar" parent="ButtonManager"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.0
offset_top = -88.0
offset_right = 328.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(328, 8)
theme_override_styles/background = SubResource("StyleBoxEmpty_s152k")
theme_override_styles/fill = SubResource("StyleBoxFlat_eppd3")
show_percentage = false

[node name="Settings" type="Button" parent="ButtonManager"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -352.0
offset_top = 187.0
offset_right = 352.0
offset_bottom = 352.0
pivot_offset = Vector2(352, 96.0001)
theme = ExtResource("4_038rj")
theme_override_font_sizes/font_size = 85
text = "KEY_SETTINGS"
clip_text = true

[node name="Play" type="Button" parent="ButtonManager"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -352.0
offset_top = -40.0
offset_right = 352.0
offset_bottom = 149.0
pivot_offset = Vector2(352, 105)
theme = ExtResource("4_038rj")
theme_override_font_sizes/font_size = 115
text = "KEY_PLAY"

[node name="Language" type="Button" parent="ButtonManager"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -456.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 160.0
grow_horizontal = 0
pivot_offset = Vector2(440, 0)
theme = ExtResource("4_038rj")
text = "KEY_LANG"

[node name="Русский" type="Button" parent="ButtonManager/Language"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.036
anchor_top = -0.111
anchor_right = 1.036
anchor_bottom = -0.111
offset_left = 51.152
offset_top = 177.094
offset_right = 475.152
offset_bottom = 331.094
pivot_offset = Vector2(212, 77)
theme = ExtResource("4_038rj")
text = "Русский"

[node name="English" type="Button" parent="ButtonManager/Language"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.036
anchor_top = -0.111
anchor_right = 1.036
anchor_bottom = -0.111
offset_left = 51.152
offset_top = 337.094
offset_right = 427.152
offset_bottom = 491.094
pivot_offset = Vector2(188, 77)
theme = ExtResource("4_038rj")
text = "English"

[node name="SettingsPanel" type="Panel" parent="ButtonManager"]
visible = false
self_modulate = Color(3, 2, 0, 1)
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1oq2d")

[node name="BlurTextureRect" type="TextureRect" parent="ButtonManager/SettingsPanel"]
z_index = -1
material = SubResource("ShaderMaterial_b0mum")
layout_mode = 1
anchors_preset = -1
anchor_left = -0.051
anchor_top = -0.024
anchor_right = 1.051
anchor_bottom = 1.024
offset_left = -0.0159988
offset_top = -0.447998
offset_right = 0.0159912
offset_bottom = 0.447876
texture = SubResource("PlaceholderTexture2D_q4moa")

[node name="SettingsVBox" parent="ButtonManager/SettingsPanel" instance=ExtResource("10_22rhk")]
layout_mode = 1
offset_left = -88.0
offset_top = 748.0
offset_right = 88.0
offset_bottom = -750.0
pivot_offset = Vector2(392, 859)

[node name="Back" type="Button" parent="ButtonManager"]
z_index = 1
offset_left = -208.0
offset_top = 104.0
offset_right = -24.01
offset_bottom = 288.0
pivot_offset = Vector2(92, 92)
theme = ExtResource("4_038rj")
icon = ExtResource("7_0n06y")
icon_alignment = 1
expand_icon = true

[node name="deletecfg" type="Button" parent="ButtonManager"]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -368.0
offset_top = -112.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 31
text = "Очистить .cfg файл"

[node name="viewcfg" type="Button" parent="ButtonManager"]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -112.0
offset_right = 381.0
offset_bottom = -16.0
grow_vertical = 0
theme_override_font_sizes/font_size = 31
text = "Просмотреть .cfg файл"

[node name="Update checker" type="Button" parent="ButtonManager"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -352.0
offset_top = -168.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("4_038rj")
theme_override_font_sizes/font_size = 64
text = " Check for updates "
alignment = 2
script = ExtResource("7_qjwc2")

[node name="HTTPRequest" type="HTTPRequest" parent="ButtonManager/Update checker"]

[connection signal="pressed" from="ButtonManager/Settings" to="ButtonManager" method="_on_settings_pressed"]
[connection signal="pressed" from="ButtonManager/Play" to="ButtonManager" method="_on_play_pressed"]
[connection signal="pressed" from="ButtonManager/Language" to="ButtonManager" method="_on_language_pressed"]
[connection signal="pressed" from="ButtonManager/Language/Русский" to="ButtonManager" method="_on_russian_pressed"]
[connection signal="pressed" from="ButtonManager/Language/English" to="ButtonManager" method="_on_english_pressed"]
[connection signal="pressed" from="ButtonManager/Back" to="ButtonManager" method="_on_back_pressed"]
[connection signal="pressed" from="ButtonManager/deletecfg" to="ButtonManager" method="_on_deletecfg_pressed"]
[connection signal="pressed" from="ButtonManager/viewcfg" to="ButtonManager" method="_on_viewcfg_pressed"]
[connection signal="pressed" from="ButtonManager/Update checker" to="ButtonManager/Update checker" method="_on_pressed"]
[connection signal="request_completed" from="ButtonManager/Update checker/HTTPRequest" to="ButtonManager/Update checker" method="_on_request_completed"]
